public/stylesheets/item_detail.css
/* ITEM_DETAIL */

.item-detail {
  margin-top: 64px;
  margin-bottom: 16px;
  width: 100%;
  display: flex;
  column-gap: 32px;
}

.item-detail .img-container {
  width: 560px;
  height: 560px;
  max-width: 560px;
  max-height: 560px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.img-container img {
  object-fit: contain;
  height: 100%;
  max-width: 100%;
}

.item-detail-info h4,
.item-detail-info h3,
.item-detail-info h2 {
  margin: 0;
}

.item-detail-info h2 {
  font-size: 36px;
}

.item-detail-info h3.subtext {
  color: gray;
  font-size: 20px;
  padding-bottom: 12px;
  border-bottom: 1px solid rgb(226, 226, 226);
}

.item-detail-info {
  width: 50%;
  word-wrap: break-word;
}

.item-detail-info .item-description {
  margin-top: 16px;
  overflow: hidden;
}

.item-detail-info h4 {
  font-size: 18px;
  margin-top: 16px;
}

.item-detail-info h2.price {
  margin-top: 16px;
}

.item-detail-info .fader {
  background-image: linear-gradient(
    to bottom,
    rgba(255, 255, 255, 0),
    rgb(255, 255, 255)
  );
  height: 75px;
  margin-top: -75px;
  z-index: 2;
  position: relative;
}

.item-detail-info .read-more {
  background-color: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  text-decoration: underline;
  color: rgb(254, 76, 80);
  margin-top: 12px;
}

.small-item-previews {
  display: flex;
  column-gap: 12px;
  flex-wrap: wrap;
  max-width: 100%;
  justify-content: center;
  height: 140px;
  overflow: hidden;
}

.small-item-prev img {
  height: 140px;
  object-fit: contain;
}

.item-detail-info a.category {
  font-family: "Raleway", sans-serif;
}

.update-delete-btns {
  display: flex;
  column-gap: 16px;
}

.update-delete-btns > a {
  height: 45px;
  width: 150px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 20px;
  font-weight: 300;
  border-radius: 6px;
  margin-top: 16px;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  color: white;
  font-family: inherit;
}

.update-delete-btns > a:hover {
  opacity: 0.75;
}

.update-delete-btns .update-btn {
  background-color: black;
}

.update-delete-btns .delete-btn {
  background-color: rgb(254, 76, 80);
}

